--- a/.github/workflows/sync-data.yml
+++ b/.github/workflows/sync-data.yml
@@ -13,19 +13,24 @@ jobs:
   sync-data:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
       
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '18'
+          cache: 'npm'
       
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm ci
+          npm install @octokit/rest dotenv
       
       - name: Create .env file
         run: |
-          echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" > .env
+          echo "PAT_TOKEN=${{ secrets.PAT_TOKEN }}" > .env
           echo "REPO_OWNER=${{ github.repository_owner }}" >> .env
           echo "REPO_NAME=${{ github.event.repository.name }}" >> .env
       
@@ -33,21 +38,36 @@ jobs:
         run: mkdir -p logs
       
       - name: Sync data
-        run: node scripts/sync-data.js
+        run: |
+          node scripts/sync-data.js
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+          REPO_OWNER: ${{ github.repository_owner }}
+          REPO_NAME: ${{ github.event.repository.name }}
         continue-on-error: true
       
       - name: Upload logs
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: sync-logs
           path: logs/
+          retention-days: 7
+      
+      - name: Check for errors
+        run: |
+          if [ -f logs/sync.log ]; then
+            if grep -q "\[ERROR\]" logs/sync.log; then
+              echo "发现错误，请检查日志文件"
+              exit 1
+            fi
+          fi
       
       - name: Commit changes
         if: success()
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add data/
-          git commit -m "Update data files" || exit 0
+          git commit -m "自动更新数据文件 [skip ci]" || exit 0
           git push 
